Fix for box shadow showing on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -94,12 +94,13 @@ a {
 		margin: 0 auto;
 	}
 
-textarea, input[type="text"], input[type="search"], .pure-form input[type="text"], .pure-form input[type="search"] {
+textarea, input[type="text"], input[type], .pure-form input[type="text"], .pure-form input[type] {
 	background: none;
 	background-color: #fff;
 	border-radius: 0 !important;
 	box-shadow: none !important;
 	color: inherit;
+	-webkit-appearance: none;
 }
 
 input[type="text"]:before, input[type="search"]:before, input[type="text"]:after, input[type="search"]:after{
